# TrustUp-Contracts

./: .gitignore  Cargo.toml  README.md  SETUP_COMPLETE.md  claude_desktop_config.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: contracts-ci.yml
contracts/adapter-trustless-contract/: Cargo.toml  README.md
contracts/adapter-trustless-contract/src/: access.rs  errors.rs  events.rs  lib.rs  storage.rs  tests.rs  types.rs
contracts/creditline-contract/: Cargo.toml
contracts/creditline-contract/src/: errors.rs  events.rs  lib.rs  storage.rs  tests.rs  types.rs
contracts/liquidity-pool-contract/: Cargo.toml
contracts/liquidity-pool-contract/src/: errors.rs  events.rs  lib.rs  liquidity_pool_tests.rs  storage.rs  tests.rs  types.rs
contracts/lp-contract/: Cargo.toml
contracts/lp-contract/src/: errors.rs  events.rs  lib.rs  storage.rs  tests.rs  types.rs
contracts/merchant-registry-contract/: Cargo.toml
contracts/merchant-registry-contract/src/: access.rs  errors.rs  events.rs  lib.rs  storage.rs  tests.rs  types.rs
contracts/parameters-contract/src/: tests.rs  types.rs
contracts/reputation-contract/: Cargo.toml  README.md
contracts/reputation-contract/src/: tests.rs
docs/: README.md  ROADMAP.md  adapter-trustless-contract-design.md
docs/architecture/: README.md  contracts.md  storage-patterns.md
docs/development/: README.md
docs/resources/: README.md  ai-assistants.md  openzeppelin.md  stellar-soroban.md
docs/standards/: README.md  code-style.md
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  setup.rs  test_default.rs  test_lifecycle.rs  test_unauthorized.rs
